<resources>
    <string name="app_name">My Gym</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="exercise_fragment">Exercises</string>
    <string name="favorites_exercises_fragment">Favorites</string>
    <string name="random_exercise_fragment">Random</string>
    <string name="no_internet_connection">No internet connection</string>
    <string name="exercise_bodyPart">Body Part</string>
    <string name="back">back</string>
    <string name="cardio">cardio</string>
    <string name="chest">chest</string>
    <string name="lower_arms">lower arms</string>
    <string name="lower_legs">lower legs</string>
    <string name="neck">neck</string>
    <string name="shoulders">shoulders</string>
    <string name="upper_arms">upper arms</string>
    <string name="upper_legs">upper legs</string>
    <string name="waist">waist</string>
    <string name="target">Target</string>
    <string name="abductors">abductors</string>
    <string name="abs">abs</string>
    <string name="adductors">adductors</string>
    <string name="biceps">biceps</string>
    <string name="calves">calves</string>
    <string name="cardiovascular_system">cardiovascular system</string>
    <string name="delts">delts</string>
    <string name="forearms">forearms</string>
    <string name="glutes">glutes</string>
    <string name="hamstrings">hamstrings</string>
    <string name="lats">lats</string>
    <string name="levator_scapulae">levator scapulae</string>
    <string name="pectorals">pectorals</string>
    <string name="quads">quads</string>
    <string name="serratus_anterior">serratus anterior</string>
    <string name="spine">spine</string>
    <string name="traps">traps</string>
    <string name="triceps">triceps</string>
    <string name="upper_back">upper back</string>
    <string name="apply">Apply</string>
    <string name="search">Search</string>
    <string name="save_to_favorites">Save to Favorites</string>
    <string name="no_favorite_exercises">No Favorite Exercises</string>
    <string name="delete_favorite_menu">Delete Favorite Menu</string>
    <string name="delete_all">Delete All</string>
    <string name="loren_ipsum">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</string>
    <string name="share">Share</string>
</resources>